src/test/06-Errors/error-depend-class-func.txt
error-depend-class-func.ck:7:5: error: calling 'go()' at this point skips initialization of a needed variable:
[7]     go();
        ^
error-depend-class-func.ck:10:14: error: ...(note: this skipped variable initialization is needed by 'fun void Foo.go()')
[10]     5 => int myVal;
                  ^
error-depend-class-func.ck:16:13: error: ...(note: this is where the variable is used within 'fun void Foo.go()' or its subsidiaries)
[16]         <<< myVal >>>;
                 ^
error-depend-class-func.ck: ...(hint: try calling 'go()' after the variable initialization)
